--- a/src/components/products/Product.css
+++ b/src/components/products/Product.css
@@ -1,4 +1,4 @@
-.product {
+.product{
     height: 5em;
     background-color: white;
     padding: 1em;
@@ -7,6 +7,10 @@
     justify-content: space-between;
     align-items: center;
 }
+/* .products{
+    height: 200px;
+    background-color: white;
+} */
 .buttons {
     display: inherit;
     justify-content: flex-end;
